appconfig update, add git ignore

--- a/EmailReviewer/App.config
+++ b/EmailReviewer/App.config
@@ -25,7 +25,7 @@
     <add name="IncidentTicketContext" connectionString="Data Source= C:\Users\tsainic\OneDrive - Mars Inc\Documents\Github\EmailReviewer\EmailReviwer.db" providerName="System.Data.SQLite.EF6" />
   </connectionStrings>
   <appSettings>
-    <add key="LogFolderPath" value="C:\Users\tsainic\OneDrive - Mars Inc\Documents\Github\EmailReviewer\EmailAutoReview.txt"/>
+    <add key="LogFolderPath" value="C:\Users\tsainic\OneDrive - Mars Inc\Documents\Github\EmailReviewer\logs\EmailAutoReview.txt"/>
   </appSettings>
 <system.data>
     <DbProviderFactories>
