--- a/EmailReviewer/App.config
+++ b/EmailReviewer/App.config
@@ -22,10 +22,10 @@
     </defaultConnectionFactory>
   </entityFramework>
   <connectionStrings>
-    <add name="IncidentTicketContext" connectionString="Data Source= C:\Users\tsainic\OneDrive - Mars Inc\Documents\Github\EmailReviewer\EmailReviwer.db" providerName="System.Data.SQLite.EF6" />
+    <add name="IncidentTicketContext" connectionString="Data Source= C:\Users\tsainic\Githubs\EmailReviewer\EmailReviwer.db" providerName="System.Data.SQLite.EF6" />
   </connectionStrings>
   <appSettings>
-    <add key="LogFolderPath" value="C:\Users\tsainic\OneDrive - Mars Inc\Documents\Github\EmailReviewer\logs\EmailAutoReview.txt"/>
+    <add key="LogFolderPath" value="C:\Users\tsainic\Githubs\EmailReviewer\logs\EmailAutoReview.txt"/>
   </appSettings>
 <system.data>
     <DbProviderFactories>
