--- a/EmailReviewer/App.config
+++ b/EmailReviewer/App.config
@@ -26,6 +26,7 @@
   </connectionStrings>
   <appSettings>
     <add key="LogFolderPath" value="C:\Users\tsainic\Githubs\EmailReviewer\logs\EmailAutoReview.txt"/>
+    <add key="TargetSourceFolder" value="ItNotification"/>
   </appSettings>
 <system.data>
     <DbProviderFactories>
