Add email types of appointment and meeting

--- a/EmailReviewer/App.config
+++ b/EmailReviewer/App.config
@@ -26,7 +26,9 @@
   </connectionStrings>
   <appSettings>
     <add key="LogFolderPath" value="C:\Users\tsainic\Githubs\EmailReviewer\logs\EmailAutoReview.txt"/>
-    <add key="TargetSourceFolder" value="ItNotification"/>
+    <!--<add key="TargetSourceFolder" value="ItNotification"/>-->
+    <add key="TargetSourceFolder" value="Inbox"/>
+
   </appSettings>
 <system.data>
     <DbProviderFactories>
