--- a/EmailReviewer/App.config
+++ b/EmailReviewer/App.config
@@ -26,8 +26,8 @@
   </connectionStrings>
   <appSettings>
     <add key="LogFolderPath" value="C:\Users\tsainic\Githubs\EmailReviewer\logs\EmailAutoReview.txt"/>
-    <!--<add key="TargetSourceFolder" value="ItNotification"/>-->
-    <add key="TargetSourceFolder" value="Inbox"/>
+    <add key="TargetSourceFolder" value="ItNotification"/>
+    <!--<add key="TargetSourceFolder" value="Inbox"/>-->
 
   </appSettings>
 <system.data>
